NXP-29984: migrate Automation components to use xmap registries